--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ body {
   text-align: center;
   height: 80px;
   border-bottom: 4px solid red;
+  border-left: 4px solid gold;
   margin: 0px auto;
   width: 100%;
 }
@@ -106,6 +107,7 @@ body {
   float: left;
   background: black url(imgs/diamond-zag.png);
   margin: 0px auto;
+  border-left: 4px solid gold;
 }
 
 #lateral .block_aside {
@@ -153,6 +155,7 @@ body {
   color: white;
   background: black url(imgs/diamond-zag.png);
   border-top: 4px solid red;
+  border-left: 4px solid gold;
 }
 
 .product {
@@ -199,8 +202,9 @@ body {
 
 .img-carrito {
   display: block;
-  margin: 10px auto;
-  height: 60px;
+  margin: 0px auto;
+  width: 150px !important;
+  height: 150px !important;
 }
 
 .product p {
@@ -210,9 +214,7 @@ body {
 }
 
 .contenedor-info{
-  margin-left: 20px;
   margin: 0px auto;
-  width: 64%;
   float: left;
 }
 
@@ -229,6 +231,7 @@ body {
   height: 212px;
   width: 246px;
   margin-bottom: 10px;
+  margin-top: 10px;
   border-radius: 5%;
 }
 
@@ -278,7 +281,6 @@ body {
 
 .total-carrito{
   float: right;
-  width: 295px;
 }
 .button-pedido{
   display: block;
@@ -306,7 +308,6 @@ body {
 
 .delete-carrito{
   float: left;
-  width: 295px;
 }
 
 .button-red {
@@ -356,13 +357,13 @@ body {
 }
 
 .text-sinanimacion{
-  font-size: 15px;
+  font-size: 20px;
   color: white;
 }
 
 .tabla-carrito{
   margin: 0px auto;
-  width: 70%;
+  width: 100%;
   border: solid 1px grey;
   background: darkgoldenrod url(imgs/escheresque_ste.png);
 }
@@ -373,24 +374,21 @@ body {
   text-align: center;
 }
 
+.gestion-tabla{
+  padding: 15px;
+}
+
 .acciones{
   margin: 0px auto;
-  width: 64%;
-  margin-left: 30%;
+  width: 50%;
 }
 
 .gestion-cat{
+  padding: 10px;
+  margin: 0px auto;
+  width: 50%;
   padding-bottom: 30px;
   margin: 0px auto;
-  width: 69%;
-  margin-left: 26%;
-  background: black url(imgs/escheresque_ste.png);
-}
-
-.gestion-cat table, th, td{
-  width: 90%;
-  margin-left: 5%;
-  padding: 20px;
 }
 
 .gestion-cat-button{
@@ -399,7 +397,7 @@ body {
 
 .div-centro{
   text-align: center;
-  margin: 0px 540px auto;
+  margin: 0px auto;
   width: 250px;
   padding-top: 20px;
   padding: 20px;
