--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
   padding: 0px;
   margin: 0px;
+  box-sizing: border-box;
 }
 
 a {
@@ -12,7 +13,7 @@ a {
 a:hover{
   transition-duration: 2s;
   color: crimson !important;
-
+  text-decoration: crimson;
 }
 
 body {
@@ -62,24 +63,27 @@ body {
   width: 100%;
 }
 
+#menu:hover{
+  
+}
+
 #menu ul {
   list-style: none;
   text-decoration: none;
   margin: 0px auto;
-  margin-left: 25px;
 }
 
 #menu ul li {
   line-height: 80px;
-  width: 130px;
+  width: 230px;
   float: left;
-  border-right: 1px solid #363636;
 }
 
 #menu a {
   color: white;
   text-decoration: none;
   display: block;
+  font-size: 22px;
   text-decoration: none;
   padding-left: 12px;
   padding-right: 12px;
@@ -162,6 +166,7 @@ body {
   border-right: 4px solid aqua;
 }
 
+/*Div product*/
 .product {
   width: 20%;
   margin: 10px;
@@ -172,6 +177,11 @@ body {
   text-align: center;
   border-top: solid 2px springgreen !important;
   border: solid 2px red;
+}
+
+.product:hover{
+  border-top: solid 2px rgb(0, 160, 80) !important;
+  border: solid 2px rgb(153, 0, 0);
 }
 
 .product h3 {
@@ -187,6 +197,13 @@ body {
   margin-bottom: 10px;
 }
 
+.product p {
+  font-weight: bold;
+  color: #555;
+  margin-bottom: 10px;
+}
+/*Fin div product*/
+/*Estilos botones general*/
 .btn {
   background-color: orange;
   border-radius: 5px;
@@ -203,6 +220,7 @@ body {
 .btn:focus {
   background-color: teal;
 }
+/*Fin btn*/
 
 .img-carrito {
   display: block;
@@ -211,11 +229,7 @@ body {
   height: 150px !important;
 }
 
-.product p {
-  font-weight: bold;
-  color: #555;
-  margin-bottom: 10px;
-}
+
 
 .contenedor-info{
   margin: 0px auto;
@@ -347,7 +361,7 @@ body {
 }
 
 .text {
-  font-size: 40px;
+  font-size: 60px;
   color: white;
   text-align: center;
   text-shadow: aqua 0 0 10px;
@@ -555,4 +569,12 @@ body {
 
 .video video{
   height: 50%;
+}
+/*Video fin*/
+/*Div info-product*/
+.info-product{
+  float: left;
+  margin: 0px auto;
+  width: 90%;
+  margin-top: 20%;
 }
